# ISO19166-B2GM

./: B2GM_BIM.py  B2GM_CM.py  B2GM_GIS.py  B2GM_LM.py  B2GM_LM_op_extrude.py  B2GM_LM_operators.py  B2GM_PD.py  B2GM_element.py  B2GM_example.json  B2GM_main.py  B2GM_model.py  B2GM_property.py  B2GM_simple_mapping.py  LICENSE  LoD1_mapping_example.json  MANIFEST.in  README.md  citygml_parser.py  citygml_parser_example.py  citygml_parser_example_building.py  pyproject.toml  pytest.ini  requirements.txt
UML/: ISO TS 19166 Edition 1.xml
XSD/: B2GM.XSD  B2GM_BIM_model.XSD  B2GM_EM.XSD  B2GM_GIS_model.XSD  B2GM_LM.XSD  B2GM_PD.XSD
XSD_citygml_3.0/: appearance.xsd  bridge.xsd  building.xsd  cityFurniture.xsd  cityGMLBase.xsd  cityObjectGroup.xsd  citygml_3.0_schema.xsd  construction.xsd  dynamizer.xsd  generics.xsd  landUse.xsd  merge_xsd_files.py  relief.xsd  transportation.xsd  tunnel.xsd  vegetation.xsd  versioning.xsd  waterBody.xsd
XSD_citygml_3_0/: CityGML_3.0.xsd  appearance.xsd  bridge.xsd  building.xsd  cityFurniture.xsd  cityGMLBase.xsd  cityObjectGroup.xsd  construction.xsd  dynamizer.xsd  generics.xsd  landUse.xsd  make_citygml_parser.bat  make_citygml_parser_cluster.bat  pointCloud.xsd  relief.xsd  transportation.xsd  tunnel.xsd  vegetation.xsd  versioning.xsd  waterBody.xsd
input_data/: B2GM_example.json  LoD1_mapping_example.json
output/: bim_model.json  intermediate.ifc.pd.json
sample_file/1_SimpleBuilding/: CityGML_2.gml  CityGML_3.gml
sample_file/2_SimpleBuilding_Roof_Overhangs/: CityGML_2.gml  CityGML_3.gml
sample_file/3_Building_With_Nested_Features/: CityGML_2.gml  CityGML_3.gml
sample_file/4_Cross-Top-Level-XLink/: CityGML_2.gml  CityGML_3.gml
tests/: B2GM_EM.json  B2GM_example.json  LoD1_mapping_example.json  conftest.py  goyang_footprint_sample.geojson  input.geojson  intermediate.ifc.pd.json  intermediate_CM.ifc.cm.json  lod_mapping.json  output_citygml_bim.json  test_bim.py  test_cm.py  test_element_lm.py  test_extrude.py  test_full_element_mapping.py  test_gis.py  test_model.py  test_model_json_save.py  test_operators.py  test_pd.py  test_pipeline.py  test_xsd_conformance.py
(+2 files in other folders)
